syntax = "proto3";
package grpc.pilot;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "svc-storage-grpc.proto";

// Response struct returning an [Object] on success and [ValidationResult] if invalid fields were provided
message Response {
    // struct with field -> error pairs to provide feedback about invalid fields
    grpc.ValidationResult validation_result = 1;
    // Object struct with id [`String`] in [`Uuid`](uuid::Uuid) format and [`Data`] struct with pilot data
    optional Object object = 2;
}

// Object struct with `id` and `data` field
// * `id` [`String`] in [`Uuid`](uuid::Uuid) format
// * `data` [`Data`] struct with pilot data
message Object {
    //id UUID v4
    string id = 1;
    //data
    Data data = 2;
}

// UpdateObject struct with `id`, `data` and `mask` fields
// * `id` [`String`] in [`Uuid`](uuid::Uuid) format
// * `data` [`Data`] struct with pilot data which should be used for update
// * `mask` [`FieldMask`] struct with pilot fields that should be updated
message UpdateObject {
    // `id` [`String`] in [`Uuid`](uuid::Uuid) format
    string id = 1;
    // struct with pilot data which should be used for update
    Data data = 2;
    // struct with pilot fields that should be updated
    google.protobuf.FieldMask mask = 3;
}

// Data struct with pilot data
message Data {
    // the Pilot's first name
    string first_name = 1;
    // the Pilot's last name
    string last_name = 2;
}

// Struct containing a `list` of pilot [Vec\<Object\>]
message List {
    // array/vector of pilot items
    repeated Object list = 1;
}
